[package]
name = "cube"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bollard = "0.18.1"
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["serde", "v4"] }
